--- a/preamble.tex
+++ b/preamble.tex
@@ -1,5 +1,5 @@
 \newcommand{\err}{\mathsf{err}}
-
+\newcommand{\wenc}[1]{\widetilde{[#1]}}
 \newcommand{\cat}{|}
 \newcommand{\dsum}{/}
 \newcommand{\pdsum}[2]{\mathrm{diag}(#1,#2)}
@@ -278,6 +278,7 @@
 \newcommand{\tgrkb}[1]{\tilde{\grkb{#1}}}
 \newcommand{\ovecb}[1]{{\overline{\vecb{#1}}}}
 \newcommand{\Pt}{\mathcal{P}}
+\newcommand{\cP}{\mathcal{P}}
 \newcommand{\Opt}{\mathcal{O}}
 \newcommand{\pt}[1]{\mathcal{#1}}
 \newcommand{\stbl}{\ \tilde \bullet \ }
