--- a/prelim/flawed.tex
+++ b/prelim/flawed.tex
@@ -1,12 +1,16 @@
 % !TEX root = ../main-ring-signature.tex
 
-To give a more clear understanding our contributions and to see why other approaches had fail, it will be illustrative what is the main dificuly of constructing a ring signature. Most schemes has followed the following approach: given the set a public keys, sign the message and prove in zero-knowledge that signature can be verified using one of the public keys in the ring. Such statement is known as a 1 out of many proofs.
+Bose et al.~claim to construct a constant-size ring signature in the standard model \cite{ACISP:BosDasRan15}. However, we believe its security can not be assessed. Our first observation is that they use they use a computational assumption, the SQROOT assumption, in the ``exponent'' of elements of a composite order bilinear group. More formally, they assume that, given composite order bilinear groups $\GG_1,\GG_2,\GG_T$ of order $N$, there are hard problems in the set of quadratic residues modulo $N$, $Q_N\subset \Z_N$. Although, not necessarily false, this is at least odd as, similarly, on might assume the hardness of DDH in the set of quadratic residues of $\Z_q$ when $\GG_1,\GG_2,\GG_T$ are bilinear groups of prime order order $p$. One might expect that, at least, both $N$ and $p$ must be quite large integers.
 
-In general, the diffilculty of proving 1 out of $n$ depends on the nature of the public keys. When they are elements in an field such as the integers one might compute a short digest of the ring, but then is problematic to compute a zero-knowledge proof related to the digest. This is what happens with Chase and Lysyanskaya's and with Bose et al.'s constructions. If the public keys belong to a less structured group, such as a bilinear group, we don't know how to compute a small digest which is compatible with efficent and expresive NIZK proofs such as Groth-Sahai proofs. Hence, the only step towards was given by Chandran et al.~by reducing the size of the proof from linear to $O(\sqrt{n})$, using techniques from private information retrieval.
+Even assuming the security of SQROOT, is still difficult to asses the security of their protocol. Specifically, on page 18 they construct an EUF-CMA adversary $\mathcal{A}_3$ which ``hands over the tuple $(rParam, \{PK_1, PK_2, \ldots, PK_{i^*} , \ldots, PK_k\})$ to ring adversary $\mathcal{D}$''. However, $\mathcal{A}_3$ must also hand the extended public keys (i.e. those containing the squares of the secret keys). Adversary $\mathcal{A}_3$ clearly can do this for parties other than $P_{i^*}$, while this is not true for $P_{i^*}$ since $sk_{i^*}$ is not known.
+In general, the problem is that the underlying signature scheme might not be secure if the integer $sk_{i,j}^2$ is public, as done on page 9 in the description of the {\bf RKeyGen} algorithm. Note that one can compute forgeries in $\GG_2$ for the full BB, given $a^2$, $b^2$ one can compute $(g_2^{a} g_2^{b})^{1/(a^2-b^2)}=g_2^{1/(a-b)}$ which is a signature (in $\GG_2$) for message $0$ and $r=-1$. Although we don't know if actual forgeries exist, the important conclusion is that unforgeability is not guaranteed.
 
-Bose et al.~claim to construct a constant-size ring signature in the standard model \cite{ACISP:BosDasRan15}. However, they construct a weak ring signature where: a) the public keys are generated all at once in a correlated way; b) the set of parties which are able to participate in a ring is fixed as well as the maximum ring size; and c) the key size is linear in the maximum ring size. In the work of Chandran et al.~and also in our setting: a) the key generation is independently run by the user using only the CRS as input; b) any party can be member of the ring as long as she has a verification key, and the maximum ring size is unbounded; and c) the key size is constant. These stronger requirements are in line with the original spirit of {non-coordination} of  Rivest et al.~\cite{AC:RivShaTau01}.
+It seems that they explicitly tried to solve this issue by considering adversaries $\mathcal{A}_4$ and $\mathcal{A}_5$ \emph{``attempting to recover secret keys from the knowledge of public keys''}. 
+They discard such adversaries because $\mathcal{A}_4$ should solve  SQROOT (why not also $\mathcal{A}_5$? the descriptions of forgery type IV and V are equal) and for $\mathcal{A}_5$ they say \emph{``We remark that such an adversary are no stronger than $\mathcal{A}_3$ type of adversary and advantage due to it is encompassed by $Adv^{Unforg}_{\mathtt{RSig},\mathcal{A}_3} (\delta)$''}. However, this is not addressing the real problem: an adversary might construct a forgery without knowing $sk$ but only $sk^2$.
 
-Gritti et al.~claim to construct a logarithmic ring signature in the standard model \cite{IET:GriSusPla16}. However, their construction is flawed as explained below.\footnote{We use multiplicative notation for the group operations to keep the expressions as they appear in the original work.}
+%they construct a weak ring signature where: a) the public keys are generated all at once in a correlated way; b) the set of parties which are able to participate in a ring is fixed as well as the maximum ring size; and c) the key size is linear in the maximum ring size. In the work of Chandran et al.~and also in our setting: a) the key generation is independently run by the user using only the CRS as input; b) any party can be member of the ring as long as she has a verification key, and the maximum ring size is unbounded; and c) the key size is constant. These stronger requirements are in line with the original spirit of {non-coordination} of  Rivest et al.~\cite{AC:RivShaTau01}.
+
+Gritti et al.~claim to construct a logarithmic ring signature in the standard model \cite{IET:GriSusPla16}. However, their signatures are in fact of linear size as explained below.
 In page 12, Gritti et al.~define $v_{b_i} := v_{b_1\cdots b_i *}$, where $b_1\cdots b_i *$ is the set of all bit-strings of size $d:=\log n$ whose prefix is $b_1\cdots b_i$. From this, one has to conclude that $v_{b_i}$ is a set (or vector) of group elements of size $2^{d-i}$.
 In the same page they define the commitment $D_{b_i} := v_{b_i}h^{s_{b_i}}$, for random $s_{b_i}\in\Z_q$, which, according to the previous observation, is the multiplication of a set (or vector) of group elements with a group element. Given that length reducing group to group commitments are known to not exist \cite{EC:AbeHarOhk12}, its representation requires at least $2^{d-i}$ group elements.\footnote{In fact, there exists length reducing group to group commitments \cite{EC:AKOT15} with a weaker binding property, but is far from clear how to use these commitments in the Gritti et al.'s work} Since commitments $D_{b_0},\ldots,D_{b_d}$ are part of the signature, the actual signature size is $\Theta(2^d)=\Theta(n)$, rather than  $\Theta(d)=\Theta(\log n)$ as claimed by Gritti et al.
 
