--- a/abstract.tex
+++ b/abstract.tex
@@ -1,6 +1,7 @@
 % !TEX root = ./main-ring-signature.tex
 
-Ring signatures, introduced by Rivest, Shamir and Tauman (ASIACRYPT 2001), allow to sign a message on behalf of a set of users while guaranteeing authenticity and anonymity. In terms of efficiency, the shortest ring signatures are of size $\Theta(\log n)$, where $n$ is the number of users, and are due to Groth and Kohlweiss (EUROCRYPT 2015) and Libert et al.~(EUROCRYPT 2016). However, both schemes are proven secure in the random oracle model. Without random oracles the most efficient construction remains the one of Chandran et al.~(ICALP 2007) with a signature of size $\Theta(\sqrt{n})$ and no improvements in the signature size have been made within a decade.
+Ring signatures, introduced by Rivest, Shamir and Tauman (ASIACRYPT 2001), allow to sign a message on behalf of a set of users while guaranteeing authenticity and anonymity. In terms of efficiency, one of the shortest ring signatures are of size $\Theta(\log n)$, where $n$ is the number of users, and are due to Groth and Kohlweiss (EUROCRYPT 2015) and Libert et al.~(EUROCRYPT 2016). An even shorter ring signature, of size independendent from the number of users, was recently proposed by Malavolta and  Schr\"oder (ASIACRYPT 2017).
+However, the former schemes are both proven secure in the random oracle model while the later requires non-falsifiable assumptions. Under more standard and plausible assumptions, the most efficient construction remains the one of Chandran et al.~(ICALP 2007) with a signature of size $\Theta(\sqrt{n})$ and no improvements in the signature size have been made within a decade.
 
-In this work we construct an asymptotically shorter ring signature without random oracles. Our construction uses bilinear groups and we prove its security under the permutation pairing assumption, introduced by Groth and Lu (ASIACRYPT 2007).
- Each signature comprises $\Theta(\sqrt[3]{n})$ group elements, signing a message requires computing $\Theta(\sqrt[3]{n})$ exponentiations, and verifying a signature requires $\Theta(n^{2/3})$ pairing operations. To the best of our knowledge, this is the first ring signature with subquadraic signatures and sublinear verification.
+In this work we construct an asymptotically shorter ring signature without random oracles or non-falsifiable assumptions. Our construction uses bilinear groups and we prove its security under the permutation pairing assumption, introduced by Groth and Lu (ASIACRYPT 2007).
+ Each signature comprises $\Theta(\sqrt[3]{n})$ group elements, signing a message requires computing $\Theta(\sqrt[3]{n})$ exponentiations, and verifying a signature requires $\Theta(n^{2/3})$ pairing operations. To the best of our knowledge, this is the first ring signature with subquadraic signatures and sublinear verification complexity in this setting.
