--- a/common-packages.tex
+++ b/common-packages.tex
@@ -19,5 +19,7 @@
 \usepackage[font=scriptsize]{caption}
 % Temporal
 \usepackage{soul}
-
+\usepackage{csquotes}
+\renewcommand{\mkbegdispquote}[2]{\itshape}
+\usepackage[multiple]{footmisc}
 \usepackage{enumerate}
