--- a/intro/high-level.tex
+++ b/intro/high-level.tex
@@ -1,3 +1,6 @@
+% !TEX root = ../main-ring-signature.tex
+
+
 %We propose an alternative way of obtaining a $\sqrt{n}$ ring signature. We then combine both techniques, Chandran et al. and ours, and obtain a $\sqrt[3]{n}$ signature.
 %
 %
@@ -27,49 +30,21 @@
 %\end{pmatrix}
 %$$
 
-In our scheme the secret/verification keys of party $P$ is $(sk,\vecb{vk})$, where $\vecb{vk}=([vk],[\vecb{a}],\vecb{a}[vk])$, $(sk,[vk])$ are secret/verification keys of the Boneh-Boyen signature scheme, and $\vecb{a}\in\Z_q^2$ is chosen independently for each key from some distribution $\mathcal{Q}$ to be specified later. Suppose that $\vecb{vk}$ is the $\alpha$ th element in the ring $R=\{\vecb{vk}_{1},\ldots,\vecb{vk}_{n}\}$ and let $1\leq i_\alpha,j_\alpha,k_\alpha \leq m$ such that $\vecb{vk}_\alpha = \vecb{vk}_{i_\alpha,j_\alpha,k_\alpha}$, where $\vecb{vk}_{i,j,k}=\vecb{vk}_{(i-1)m^2+(j-1)m+k}$ for $1\leq  i,j,k\leq m$ and $m:=\sqrt[3]{n}$. Below we describe a $\Theta(\sqrt[3]{n})$ set-membership-proof in $R$.
+Our scheme builds on top of the ring signature of Chandran et al.~and improves the underlying $\Theta(\sqrt{n})$ proof that the opening of a Groth-Sahai commitment is a Boneh-Boyen signature verification key $[vk]_2\in\GG_2$ and belongs to the ring of verification keys $R=\{[vk_1]_2,\ldots,[vk_n]_2\}$. In the rest of this section we simply refer to this proof as a ``set-membership proof'' and we remark that it might be applied to any set of group elements (not only of verification keys).
 
-Consider the sets
+Our proof consists of two set-membership proofs in sets of size $n^{2/3}$ --- i.e.~each proof is of size $\Theta(\sqrt[3]{n})$ ---  plus $\Theta(\sqrt[3]{n})$ Groth-Sahai proofs and Groth-Sahai commitments.
+We enlarge user's verification keys the by including $[\vecb{a}]_1,[\vecb{a}]_2$, where $\vecb{a}\gets\mathcal{Q}$, and $[\vecb{a}vk]_2=\vecb{a}[vk]_2$, where $[vk]_2$ is the verification key of a Boneh-Boyen signature. Thereby, verification key of the $i$ th user is of the form $\vecb{vk}_i:=([vk_i]_2,[\vecb{a}]_1,[\vecb{a}]_2,[\vecb{a}_ivk_i]_2)$. In spite of these differences with Chandran et al.'s verification key, our proof also shows that the opening of a Groth-Sahai commitment is a Boneh-Boyen verification key $[vk_i]_2$ and belongs to $\{[vk_1]_2,\ldots,[vk_n]_2\}$.
+
+Our first step is to arrange the verification keys in $n^{2/3}$ blocks of size $m=\sqrt[3]{n}$. To do so we coin the following notation: for a sequence $\{s\}_{1\leq i \leq n}$ define $s_{\mu,\nu}:=s_{(\mu-1)m+\nu}$, where  $1\leq\mu\leq n^{2/3},1\leq \nu\leq m$.  The prover and the verifier arrange the elements of the verification keys into $[\vecb{\kappa}_1]_2,\ldots, [\vecb{\kappa}_{n^{2/3}}]_2$, $A_1,\ldots, A_{n^{2/3}}$, and $[\matr{A}_1]_1,\ldots, [\matr{A}_{n^{2/3}}]_1$ such that $[\vecb{\kappa}_i]_2:= ([vk_{i,1}]_2,\ldots,[vk_{i,m}]_2)^\top\in\GG^m, A_i:=\{[\vecb{a}_{i,1}]_1,\ldots,[\vecb{a}_{i,m}]_1\}\in Q_m$ and $[\matr{A}_i]_1=[\vecb{a}_{i,1}\cat\cdots\cat\vecb{a}_{i,m}]_1\in\GG^{2\times m}$. They also define the sets
 \begin{align*}
-&S:=\{[\vecb{s}_1],\ldots,[\vecb{s}_{n^{2/3}}]\}:=\left\{\sum_{i=1}^{m}[\vecb{a}_{i,1,1}],\ldots,\sum_{i=1}^{m}[\vecb{a}_{i,m,m}]\right\}\text{ and }\\
-&S':=\{[\vecb{s}'_1],\ldots,[\vecb{s}'_{n^{2/3}}]\}:=\left\{\sum_{i=1}^{m}\vecb{a}_{i,1,1}[vk_{i,1,1}],\ldots,\sum_{i=1}^{m}\vecb{a}_{i,m,m}[vk_{i,m,m}]\right\}.
+&H:=\{h(A_1),\ldots,\allowbreak h(A_{n^{2/3}})\}\\
+&G:=\{g_{[\matr{A}_1]_1}([\vecb{\kappa}_1]_2),\allowbreak\ldots,g_{[\matr{A}_{n^{2/3}}]_1}([\vecb{\kappa}_{n^{2/3}}]_2)\},
 \end{align*}
+where $g_{[\matr{A}_i]_1}([\vecb{\kappa}_i]_2)$ is computed as $[\matr{A}_i\vecb{\kappa}_i]_2=\sum_{j=1}^m [\vecb{a}_{i,j}vk_{i,j}]_2$.
 
-The prover commits to $[\vecb{x}]=[\vecb{s}_\mu]$ and $[\vecb{y}]=[\vecb{s}'_{\mu'}]$, for $\mu=\mu'=(j_\alpha-1)m+k_\alpha$, and shows, using (twice) the set-membership proof of Chandran et al., that $[\vecb{x}]\in S$ and that $[\vecb{y}]\in S'$.
-The prover also needs to assure that $\mu=\mu'$, which can be done reutilizing the commitment to $\mu$ (in fact to its representation as two unitary vectors of size $m$) used in the proof that $[\vecb{x}]\in S$ and in the proof that $[\vecb{y}]\in S'$. Since both sets are of size $n^{2/3}$, the two set membership proofs are of size $\Theta(\sqrt[3]{n})$.
- 
-Now that the prover has committed to elements $[\vecb{x}]=\sum_{i=1}^{m}[\vecb{a}_{i,j_\alpha,k_\alpha}]$ and $[\vecb{y}]=\sum_{i=1}^{m}\vecb{a}_{i,j_\alpha,k_\alpha}[vk_{i,j_\alpha,k_\alpha}]$, it additionally commits to $[\kappa_1]:=[vk_{1,j_\alpha,k_\alpha}],\allowbreak\ldots,\allowbreak[\kappa_m]:=[vk_{m,j_\alpha,k_\alpha}]$ and $[\vecb{z}_1]:=[\vecb{a}_{1,j_\alpha,k_\alpha}],\ldots,[\vecb{z}_m]:=[\vecb{a}_{m,j_\alpha,k_\alpha}]$. The prover now gives a proof that
-\begin{equation}
-\sum_{i=1}^{m}[\vecb{z}_i][\kappa_i]=[\vecb{y}][1]. \label{eq:verif1}
-\end{equation}
+The prover starts computing Groth-Sahai commitments to $[vk_\alpha]_2=[vk_{\mu,\nu}]_2$ and to $h(A_\mu)$, for some $1\leq \alpha \leq n$, and computes the first set-membership proof showing that $h(A_\mu)\in H$.
+The prover commits to each element of $A'=A_\mu$ such that the first committed element is $[\vecb{a}_\alpha]_1$ and the ones that follow are the other columns of $[\matr{A}_\mu]_1$ (preserving the order). Denote by $[\matr{A}']_1$ the matrix whose columns are the elements of $A'$ in the order defined before.  The prover shows using Groth-Sahai proofs that $A'\in Q_m$ and that $h(A')=h(A_\mu)$. From this part of the proof we know that, with all but negligible probability, $A'=A_\mu$.
 
-Assume for a while that $\vecb{z}_1,\ldots,\vecb{z}_m$ is a permutation of $\vecb{a}_{1,j_\alpha,k_\alpha},\ldots,\vecb{a}_{m,j_\alpha,k_\alpha}$, that is $\vecb{z}_i=\vecb{a}_{\pi(i),j_\alpha,k_\alpha}$, $1\leq i\leq m$, for some permutation $\pi\in S_m$. Therefore, equation (\ref{eq:verif1}) implies that
-\begin{align*}
-\sum_{i=1}^{m}[\vecb{z}_i][\kappa_i]&=\sum_{i=1}^{m}[\vecb{a}_{\pi(i),j_\alpha,k_\alpha}][\kappa_i]=\sum_{i=1}^{m}[\vecb{a}_{i,j_\alpha,k_\alpha}][\kappa_{\pi^{-1}(i)}]\\
-&=\sum_{i=1}^{m}[\vecb{a}_{i,j_\alpha,k_\alpha}][vk_{i,j_\alpha,k_\alpha}].
-\end{align*}
-Then $\kappa_1,\ldots,\kappa_m$ is a permutation of $vk_{1,j_\alpha,k_\alpha},\ldots,vk_{m,j_\alpha,k_\alpha}$ (the same defined by $\vecb{z}_1,\ldots,\vecb{z}_m$), unless $(\kappa_{\pi^{-1}(1)}-{vk_{1,j_\alpha,k_\alpha}),\ldots,\kappa_{\pi^{-1}(m)}-vk_{m,j_\alpha,k_\alpha})})^\top$ is in the kernel of $\matr{A}$. However, this is in general a hard problem and in fact corresponds a to kernel matrix Diffie-Hellman assumption, in the terminology of Morillo et al.~\cite{AC:MorRafVil16}.
-For the distribution $\mathcal{Q}$ (defined later), Groth and Lu showed the hardness of this problem in the generic group model \cite{AC:GroLu07}.
+Next, the prover computes Groth-Sahai commitments to each element of the vector $[\vecb{\kappa}']_2$, whose first element is $[vk_\alpha]_2$ and the rest are the other verification keys in $[\vecb{\kappa}_\mu]_2$ (preserving the order), and commits also to $g_{[\matr{A_{\mu'}}]_1}([\vecb{\kappa}_{\mu'}]_2)$, where $\mu'=\mu$. The second set-membership proof shows that $g_{[\matr{A_{\mu'}}]_1}([\vecb{\kappa}_{\mu'}]_2)\in G$ and that $\mu'=\mu$. Finally, the prover gives a Groth-Sahai proof that $g_{[\matr{A}']_1}([\vecb{\kappa}']_2)=g_{[\matr{A_{\mu'}}]_1}([\vecb{\kappa}_{\mu'}]_2)$.
 
-Finally, the prover  shows, using Chandran et al.'s set-membership proof, that $[vk_\alpha]\in\{[\kappa_1],\ldots,[\kappa_m]\}$ which implies that  $[vk_\alpha]=[vk_{i_\alpha,j_\alpha,k_\alpha}]$.
-
-It is only left the to show that $\vecb{z}_1,\ldots,\vecb{z}_m$ is a permutation of $\vecb{a}_{1,j_\alpha,k_\alpha},\ldots,\allowbreak\vecb{a}_{m,j_\alpha,k_\alpha}$. To do so we will use the following assumption introduced by Groth and Lu \cite{AC:GroLu07}.
-\begin{definition}[Permutation Pairing Assumption]\label{def:ppa}
-Let $\mathcal{Q}_{m}=\underbrace{\mathcal{Q}\cat\ldots\cat\mathcal{Q}}_{m\text{ times}}$, where concatenation of  distributions is defined in the natural way and 
-$$\mathcal{Q}: \vecb{a}=\pmatri{x\\x^2},\quad x\gets\Z_q.$$
-We say that the $m$-permutation pairing assumption holds relative to $\G_s$ if for any adversary $\advA$
-$$
-\Pr\left[
-\begin{array}{l}
-gk\gets\G_s(1^\lambda);\matr{A}\gets\mathcal{Q}_{m};[\matr{Z}]\gets\advA(gk,[\matr{A}]):\\
-\mathrm{(i)} \sum_{i=1}^{m}[\vecb{z}_i]=\sum_{i=1}^{m}[\vecb{a}_i], \mathrm{(ii)}\ \forall 1\leq i\leq m\ [z_{2,i}][1]=[z_{1,i}][z_{1,i}],\\
-\text{ and }\matr{Z}\text{ is not a permutation of the columns of }\matr{A}
-\end{array}
-\right],
-$$
-where $[\matr{Z}]=[(\vecb{z}_1,\ldots,\vecb{z}_m)], [\matr{A}]=[(\vecb{a}_1,\ldots,\vecb{a}_m)]\in\GG^{2\times m}$,
-is negligible in $\lambda$.
-\end{definition}
-
-If the prover additionally proves that equations (i) and (ii) from definition \ref{def:ppa} are satisfied for $\matr{A}:=(\vecb{a}_{1,j_\alpha,k_\alpha},\ldots,\vecb{a}_{m,j_\alpha,k_\alpha})$, which can be done with $\Theta(m)$ group elements using Groth-Sahai proofs, the assumption is guaranteeing that the columns of $\matr{Z}$ are a permutation of the columns of $\matr{A}$.
-
+Since $A'=A_\mu$, we conclude that $[\vecb{\kappa}']_1$ is a permutation of $[\vecb{\kappa}_\mu]_1$ and thus $[\kappa'_1]_2=[vk_\alpha]_2$ is in the ring of verification keys.
