--- a/intro/introduction.tex
+++ b/intro/introduction.tex
@@ -3,34 +3,41 @@
 Ring signatures, introduced by Rivest, Shamir and Tauman, \cite{AC:RivShaTau01}, allow to anonymously sign a message on behalf of a ring of users $R=\{P_1,\ldots,P_n\}$, only if the signer belongs to that ring. That is, no one outside $R$ can forge a valid signature and  an honestly computed signature reveals (essentially) no information about the actual signer.  
 Unlike other similar primitives such as group signatures \cite{EC:ChaVan91}, ring signatures are not coordinated: each user generates secret/public keys on his own --- i.e.~no central authorities --- and might sign on behalf of a ring without the approval or assistance of the other members.
 
-The original motivation for ring signatures was anonymous leakage of secrets. Suppose a high rank officer wants to leak some sensitive information to a journalist without revealing its identity. To do so, it signs this information using a ring signature where the ring contains all other high rank officer. Besides this hypothetical application, with the advent of cryptocurrency ring signatures have found new and more practical applications. For example, for spending a coin in Monero, a user form a ring from public keys in the blockchain to issue a ring signature on the transaction. Thereby, the anonimity properties of the ring signature guarantees untraceability and fungibility. 
-Given the practical usefullness of ring signatures, it becomes crucial to study and improve its efficiency.
+The original motivation for ring signatures was anonymous leakage of secrets. Suppose a high rank officer wants to leak some sensitive document to a journalist without revealing its identity. To do so, it signs this document using a ring signature where the ring contains all other high rank officers. The journalist is convinced that some high rank officer signed the document, but it has no clue who.
+
+Besides this hypothetical application, with the advent of cryptocurrencies, ring signatures have found new and more practical applications. For example, for spending a coin in Monero, a user form a ring from public keys in the blockchain to issue a ring signature on the transaction. Thereby, the anonymity properties of the ring signature guarantee untraceability and fungibility. 
+Given the practical usefulness of ring signatures, it becomes crucial to study and improve its efficiency.
 
 \subsection{Related Work}
-The efficiency of a ring signature might be splitted in three parrameters: the signature size, the cost (time) of computig a signature, and the cost (time) of verifying a signature. Among these metrics, the signature size has received the most attention and improvements in the size ussally imply improvement on the other metrics.
-In terms of ring size, the most efficient constructions have signature size logarithmic in the size of the ring \cite{EC:GroKoh15,EC:LLNW16}. However,  both constructions rely on the {random oracle model}, which is an idealization of hash functions and with known inconsitencie \cite{FOCS:GolKal03}. Malavolta et al.~ constructed a constant size ring signature without random oracles \cite{AC:MalSho17}. However, their construction achieves constant-size signatures at the cost of relying on controversial non-falsifiable assumptions \cite{C:Naor03} such as the knowledge of exponent assumption.
-Given the disadvantages of random oracles and non-falsifiable assumptions, it is worth to explore constructions from more standard assumptions.
+The efficiency of a ring signature might be splitted in three parameters: the signature size, the cost (time) of computing a signature, and the cost (time) of verifying a signature. Among these metrics, the signature size has received the most attention and improvements in the size usually imply improvement on the other metrics.
+In terms of ring size, one the most efficient constructions have signature size logarithmic in the size of the ring \cite{EC:GroKoh15,EC:LLNW16}. However,  both constructions rely on the {random oracle model}, which is an idealization of hash functions with known theoretical inconsistencies \cite{FOCS:GolKal03}. Malavolta et al.~constructed a constant size ring signature without random oracles \cite{AC:MalSch17} using SNARKS \cite{EC:GGPR13,AC:DFGK14,EC:Groth16} as a subroutine. However, SNARKS are known to require controversial non-falsifiable assumptions such as the knowledge of exponent assumption  \cite{STOC:GenWic11,C:Naor03} .
+In spite of their limitations, in practice random oracles or non-falsifiable assumptions might be acceptable. However, it is still interesting and challenging to explore practical constructions from more standard assumptions.
 
-Chase and Lysyanskaya introduced signatures of knowledge \cite{C:ChaLys06} and using this primitive constructed constant-size ring signatures from accumulators, following Dodis et al.\cite{EC:DKNS04}. The scheme description is sparsely detailed and no proof of security is given but, for fairness, we have to say that their work is previous to the formal definition of ring signatures of Bender et al.~\cite{TCC:BenKatMor06}. However, a quick analysis of their proposed scheme shows that is impractical. Their scheme goes as follows.
-Given a ring of RSA public keys $R = \{y_1,...,y_n\}\subseteq \Z_{\phi(N)}$, one can compute an accumulated value $a = g^{\prod_{i=1}^n y_i}$ and a witness $w_i = a^{-y_i} \mod N$ that $y_i$ is accumulated in $a$, which can be verified cheking if $a = w_i^{y_i} \mod N$. A ring signature on a message $m$ is computed as a signature on $m$ of knowledge of $x_i,y_i\in \Z_{\phi{N}}, w_i\in \Z_N$ such that: a) $x_iy_i = 1 \mod \phi(N)$ and b)  $a = w_i^{y_i} \mod N$. However, signatures of knowledge are built on top of simulation sound NIZK which in turn is built from normal NIZK. Since no efficient NIZK (without random oracles nor falsifiable assumptions) for statements a) and b) is known, and the only plausible alternative seems generic NIZK arguments for circuit satisfiability, whose proofs are of size $\Omega(|C|)$. For example, using Groth-Sahai proofs, one might expect the circuit for a) and b) to have at least $10^4$ gates, and thus proof will be of size greater than $10^4$ elements of a bilinear group.
+Chase and Lysyanskaya proposed a ring signature scheme whose size, although independent from the number of users, is large enough for consider it practical \cite{C:ChaLys06}.%\footnote{This works seems to has gone unnoticed in the ring signature literature. In fact, to the best of our knowledge, the only recent work citing it is \cite{AC:MalSch17}.}
+After introducing
+signatures of knowledge, they use this primitive to construct ring signatures from accumulators, following Dodis et al.~\cite{EC:DKNS04}. The scheme description is only sketched and no proof of security is given but, for fairness and as also noted in \cite{AC:MalSch17}, their work is previous to the (now standard) formal definition of ring signatures of Bender et al.~\cite{TCC:BenKatMor06}. Their scheme goes as follows.
+Given a ring of RSA public keys $R = \{(N,y_1),...,(N,y_n)\}\subseteq \Z_{\phi(N)}$, one can compute an accumulated value $a = g^{\prod_{i=1}^n y_i}$ and a witness $w_i = a^{-y_i} \mod N$ that $y_i$ is accumulated in $a$, which can be verified checking if $a = w_i^{y_i} \mod N$. A ring signature on a message $m$ is computed as a signature on $m$ of knowledge of $x_i,y_i\in \Z_{\phi(N)}, w_i\in \Z_N$ such that: a) $x_iy_i = 1 \mod \phi(N)$ and b)  $a = w_i^{y_i} \mod N$. However, signatures of knowledge are built on top of simulation sound NIZK which in turn is built from standard NIZK, and the only NIZK proof system for a) and b) seems to be generic NIZK for circuit satisfiability. For example, using Groth-Sahai proofs the proof will require $O(|C|)$ elements of a bilinear group, where $|C|$ is the size of the circuit for computing a) $\wedge$ b). One might expect the circuit for a) and b) to have at least $\approx 10^4$ gates\footnote{For example, in \url{https://www.cs.bris.ac.uk/Research/CryptographySecurity/MPC/}, a circuit for multiplying 32x32-bit integers requires $\approx 10^4$ gates. Our estimation is quite conservative since RSA integers should be of size $\geq 1024$, and further, one might expect a circuit for a) and b) to contain at least thousands of multiplication gates.}, and thus the proof will be of size greater than $10^4$ elements of a bilinear group.
 
-Despite Chase and Lysyanskaya's construction, without random oracles nor non-fasifiable assumptions all constructions have signatures of size linear in the size of the ring, being the sole exception the $\Theta(\sqrt{n})$ ring signature of Chandran et al.~\cite{ICALP:ChaGroSah07} 
-Although some previous works claim to construct signatures of constant \cite{ACISP:BosDasRan15} or logarithmic \cite{IET:GriSusPla16} size, all of them fail  (see Section \ref{sec:rs-flawed}). The only (non-asymptotic) improvements we are aware of are \cite{TCC:Rafols15,AC:GonHevRaf15}.
+Despite Chase and Lysyanskaya's construction, without random oracles or non-falsifiable assumptions all constructions have signatures of size linear in the size of the ring, being the sole exception the $\Theta(\sqrt{n})$ ring signature of Chandran et al.~\cite{ICALP:ChaGroSah07}. They construct a simple and nice ring signature which at its core implements a \emph{set-membersip proof}, i.e.~a proof that somme commited public key belongs to the set of public keys of the ring users. Their set-mebership proof is quite strong, in the sense that the verification keys may be even chosen by the adversary. Going a step forward, we will build a more efficient but weaker set-mebership proof which is still useful for building ring sinatures.
+
+We note that no improvements in the
+signature size have been made within a decade. In fact, although two previous works claim to construct signatures of constant \cite{ACISP:BosDasRan15} or logarithmic \cite{IET:GriSusPla16} size, in Appendix \ref{sec:rs-flawed} we show that one construction fails to give a correct proof of security and the other is in fact of size $\Theta(n)$. The only (non-asymptotic) improvements we are aware of are \cite{TCC:Rafols15,AC:GonHevRaf15}.
 
 \subsection{Our contribution}
-In this work we present the first ring signature (without random oracles) whose signature size is asymptotically smaller than Chandran et al.'s. Our ring signature consists of $\Theta(\sqrt[3]{n})$ group elements, computing a signature requires $\Theta(\sqrt[3]{n})$ exponentiations, and verifying a signature requires $\Theta(n^{2/3})$ pairings.
+In this work we present the first ring signature based on bilinear groups whose signature size is asymptotically smaller than Chandran et al.'s, and whose security is proven under falsifiable assumptions and without random oracles. Our ring signature consists of $\Theta(\sqrt[3]{n})$ group elements, computing a signature requires $\Theta(\sqrt[3]{n})$ exponentiations, and verifying a signature requires $\Theta(n^{2/3})$ pairings. Our ring signature is perfectly anonymous, i.e.~it completely hides the identity of the actual signer, and is computationally infeasible to forge signatures for non-members of the ring.
 
-The security of our construction relies on a security assumption --- the {permutation pairing assumption} --- introduced by Groth and Lu \cite{AC:GroLu07} in an unrelated setting: proofs of correctness of a shuffle. While the assumption is ``non-standard'', in the sense that is not a ``DDH like'' assumption, it is a falsifiable assumption and it was proven hard in generic symmetric groups by Groth and Lu. For easiness of exposition, we work on symmetric groups ($\GG_1=\GG_2$) but our techniques might be easily extended to more efficient asymmetric groups in light of recent works on automation of secure symmetric-to-asymmetric conversion \cite{C:AGOT14a,C:AbeHosOhk16,CCS:AkiGarHoh15}.
+The security of our construction relies on a security assumption --- the {permutation pairing assumption} --- introduced by Groth and Lu \cite{AC:GroLu07} in an unrelated setting: proofs of correctness of a shuffle. While the assumption is ``non-standard'', in the sense that is not a ``DDH like'' assumption, it is a falsifiable assumption and it was proven hard in generic symmetric bilinear groups by Groth and Lu. We work on asymmetric groups (Type III groups \cite{EPRINT:GalPatSma06}) and thus we give a natural variant of the permutation pairing assumption which we prove secure in generic asymmetric bilinear groups.
 
 Our ring signature outperforms Chandran et al.'s in terms signature size for any $n > 144$, in terms of signature generation time for any $n>96$, and in terms of verifier efficiency for any $n>111$. However, this analysis should be taken with care, since Chandran et al.'s signature is proven secure under the decisional linear (DLin) assumption while ours is proven secure under the permutation pairing assumption. Being the permutation pairing assumption much less studied than DLin, it could be the case that our scheme would be as secure as Chandran et al.'s at higher values of the security parameter. In Table \ref{table:eff} we provide a comparison between our scheme and Chandran et al.'s.
-
+ 
 \input{intro/table-eff}
+
+We require members of the ring to erase the random coins after generating the public/secret key pair. The reason is that the public keys contain group elements whose discrete logs are of the form $(a,a^2)$. Although this helps to embed an instance of the permutation pairing assumption in the set of (honest) public keys. It prevents oblivious sampling of the verification keys and thus, users must generate information that, when the user is corrupted, renders easy the permutation pairing assumption. We remark that this only affects unforgeability and honestly generated signatures still don't reveal any information about the signer.
+
+Further, without erasures, it is unlikely that such adversary exists. We uphold this on the fact that our scheme is secure, without erasures, under a stronger assumption, the \emph{interactive} permutation pairing assumption, which we prove secure in generic bilinear groups.
 %
 %\begin{figure}[!t]
 %	\includegraphics[scale=.25]{intro/sign_size}
 %	\includegraphics[scale=.25]{intro/sign_time}
 %	\includegraphics[scale=.25]{intro/ver_time}
 %\end{figure}
-
-\subsection{The Hardness of constructing Ring Signatures.}
-\input{prelim/flawed}
