--- a/main-ring-signature.tex
+++ b/main-ring-signature.tex
@@ -15,8 +15,8 @@
 \bibliographystyle{plainurl}% the recommended bibstyle
 
 % Author macros::begin %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\title{A more efficeint Ring Signature without Random Oracles}
-\titlerunning{A more efficent Ring Signature} %optional, in case that the title is too long; the running title should fit into the top page column
+\title{A more efficient Ring Signature without Random Oracles}
+\titlerunning{A more efficient Ring Signature} %optional, in case that the title is too long; the running title should fit into the top page column
 
 %% Please provide for each author the \author and \affil macro, even when authors have the same affiliation, i.e. for each author there needs to be the  \author and \affil macros
 \author[1]{Alonso Gonz\'alez}
@@ -65,7 +65,7 @@
 
 	\input{intro/tech-overview}
 
-    \subsection{Discussion}
+    %\subsection{Discussion}
 
     	\input{intro/discussion}
 
@@ -78,39 +78,29 @@
 	\subsection{Hardness Assumptions}
 
 	\input{prelim/assumptions}
-        
-	\subsection{Groth-Sahai Proofs in the SXDH Instantiation} \label{sec:gs-proofs}
-        
-            \input{prelim/symm-gs}
 
-                \subsection{Ring Signature Definition}
+		\subsection{Ring Signature Definition}
     
-            \input{prelim/definition}
+            		\input{prelim/definition}
 
-        \subsection{Boneh-Boyen Signatures} \label{sec:bbs}
-    
-            \input{prelim/bb-signatures}
-
-    \subsection{Flawed or Weaker Ring Signatures}\label{sec:rs-flawed}
-    
-         \input{prelim/flawed}
-
-       \subsection{Chandran et al.'s Ring Signature}
+      	\subsection{Chandran et al.'s Ring Signature}
 	
-         \input{intro/chandran}
+       		\input{intro/chandran}
 
 	\subsection{Hash Functions} \label{sec:hash}
 
-	\input{prelim/hash}
+		\input{prelim/hash}
 
-    \section{Our Construction}
+    \section{Our Construction} \label{sec:oc}
 
 	\input{our-construction/hash}
-	%\subsection{High Level Description of our Construction}
+	
+	\subsection{High Level Description of our Construction} \label{sec:high-level}
         
-        %\input{intro/high-level}
+        		\input{intro/high-level}
     	
-        \input{our-construction/construction}
+	\subsection{Our Ring Signature}\label{sec:our-construction}
+        	\input{our-construction/construction} 
 %%
 %% Bibliography
 %%
@@ -126,6 +116,22 @@
 	\section{Security of the $m$-PPA assumption in Asymmetric Groups} \label{sec:aPPA}
 	
 		\input{appendix/asymm-ppa}
+
+	\section{Proof of Theorem \ref{theo:security}}
+
+		\input{appendix/security-proof}
+
+	\section{Groth-Sahai Proofs in the SXDH Instantiation} \label{sec:gs-proofs}
+
+		\input{prelim/symm-gs}
+
+	\subsection{Boneh-Boyen Signatures} \label{sec:bbs}
+    
+            \input{prelim/bb-signatures}
+
+	 \section{Flawed Ring Signatures\protect\footnote{Both flaws were communicated to the respective authors.}\protect\footnote{In this section we use multiplicative notation for the group operations to keep the expressions as they appear in the original works.}}\label{sec:rs-flawed}
+    
+        	 \input{prelim/flawed}
 
 %\section{Our construction in Asymmetric Groups}
 %
