--- a/intro/table-eff.tex
+++ b/intro/table-eff.tex
@@ -1,3 +1,5 @@
+% !TEX root = ../main-ring-signature.tex
+
 \begin{table}[h]
 \begin{center}
 \begin{minipage}{\textwidth}
@@ -7,11 +9,14 @@
 %\hline
                                            & Chandran et al.~\cite{ICALP:ChaGroSah07} & This work \\
 \hline%\hline
-\rule{0pt}{2.5ex}CRS size                  & $9$                                       & $9$       \\ 
-\rule{0pt}{2.5ex}Verification key size     & $1$                                       & $5$       \\
-\rule{0pt}{2.5ex}Signature size            & $24 \sqrt{n} + 24$                        & $48 \sqrt[3]{n} + 60$\\    
-\rule{0pt}{2.5ex}Signature generation time & $42 \sqrt{n} + 49$                        & $78 \sqrt[3]{n} + 103$\\
-\rule{0pt}{2.5ex}Verification time         & $3 n + 120 \sqrt{n} + 121$                & $6 n^{2/3} + 268 \sqrt[3]{n} + 291$\\
+\rule{0pt}{2.5ex}CRS size  $\GG_1$              & $4$                                       & $4$       \\
+\rule{0pt}{2.5ex}CRS size     $\GG_2$    & $4$                                       & $4$       \\ 
+\rule{0pt}{2.5ex}Verification key size $\GG_1$    & $1$                                       & $2$       \\
+\rule{0pt}{2.5ex}Verification key size  $\GG_2$   & $0$                                       & $5$       \\
+\rule{0pt}{2.5ex}Signature size      $\GG_1$      & $12\sqrt{n}+10$                        & $24\sqrt[3]{n} + 36$\\
+\rule{0pt}{2.5ex}Signature size      $\GG_2$      & $15\sqrt{n}+8$                        & $34\sqrt[3]{n} + 24$\\       
+\rule{0pt}{2.5ex}Signature generation time & $37\sqrt{n}+23$                        & $80\sqrt[3]{n}+71$\\
+\rule{0pt}{2.5ex}Verification time         & $2n + 60\sqrt{n}+38$                & $8n^{2/3} + 162\sqrt[3]{n} + 118$\\
 %\hline 
 \end{tabular}
 %\end{scriptsize}
